--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% if page.usemathjax %}
+<script type="text/javascript" async
+ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
+{% end if %}
+    
     {% include head.html %}
     <script>
         $(document).ready(function() {
