--- a/_includes/note.html
+++ b/_includes/note.html
@@ -1,1 +1,1 @@
-<div markdown="span" class="alert alert-info" role="alert"><i class="fa fa-info-circle"></i> <b></b> {{include.content}}</div>
+<div markdown="span" class="alert alert-info" role="alert"><b></b> {{include.content}}</div>
