--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
       displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
       processEscapes: true
     }
+    "HTML-CSS": { linebreaks: { automatic: true } },
+  CommonHTML: { linebreaks: { automatic: true } },
+  SVG: { linebreaks: { automatic: true } }
   });
 </script>
 <script type="text/javascript"
