--- a/_includes/important.html
+++ b/_includes/important.html
@@ -1,1 +1,1 @@
-<div markdown="span" class="alert alert-warning" role="alert"> {{include.content}}</div>
+<div markdown="span" class="alert alert-warning" role="alert"><b>CLIQUE AQUI:</b> {{include.content}}</div>
