--- a/_includes/important.html
+++ b/_includes/important.html
@@ -1,1 +1,1 @@
-<div markdown="span" class="alert alert-warning" role="alert"><i class="fa fa-exclamation-circle"><span style="color:gold">*Clique Aqui:*</span> {{include.content}}</div>
+<div markdown="span" class="alert alert-warning" role="alert"><i class="fa fa-exclamation-circle">*Clique Aqui:* {{include.content}}</div>
