--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     },
     tex2jax: {
       inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      displayMath: [ ['$$','$$'],['\begin{equation}','\end{equation}'],["\\[","\\]"] ],
       processEscapes: true
     },
     "HTML-CSS": { linebreaks: { automatic: true } },
